# minebtx-start

./: .gitignore  BILLING_MODEL.md  CNAME  DEPLOY_BACKEND.md  DEPLOY_TRAVEL_APP.md  FEE_MODEL.md  IMPROVEMENT_OPPORTUNITIES.md  LICENSE  MAC_SETUP.md  README.md  REVENUE_MODEL.md  START_IMPROVEMENTS.md  TREASURY.md  VAST_AI.md  WALLET_SETUP.md  WEBSITE.md  WINDOWS_SETUP.md  btx-gpu-mining.html  btx-mining.html  btx-shovel-tools.html  config.example.yaml  faststart-images.json  guided-cloud-btx-mining.html  index.html  install.sh  llms.txt  mine-btx-on-mac.html  mine-btx-on-windows.html  platform-treasury.json  pyproject.toml  rent-gpu-btx-mining.html  robots.txt  sitemap.xml  stats-snapshot.json  vast-offers.json  vast-referral.json
assets/: site.js  styles.css
backend/: .env.example  DNS.md  OWNED_BACKEND.md  README.md  __init__.py  app.py  billing.py  block_builder.py  btx_rpc.py  economics.py  fee_policy.py  network_agent.py  payout_worker.py  platform-revenue-policy.example.json  pool-policy.example.env  repository.py  schema.sql  settings.py  share_validation.py  stratum_jobs.py  stratum_server.py  travel_app.py
deploy/: HETZNER_CPX31_SETUP.md  HETZNER_CPX32_SETUP.md  backend.env.example
docs/: ONBOARDING.md  TUNING.md
release-tooling/: README.md  SHA256SUMS  publish-release.sh
scripts/: create-platform-fee-wallet.sh  update-vast-offers.js  verify-owned-backend.sh
tests/: test_backend_repository.py  test_billing.py  test_economics.py  test_fee_policy.py  test_gbt_solve_wrapper.py  test_network_agent.py  test_stratum_server.py  test_verifier.py
(+28 files in other folders)
